Updated the button name as SignIn

--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 <label for="Password">Password</label>
 <input type="password" name="Password">
 <br>
-<button>Login</button><br>
+<button>SignIn</button><br>
 <label>New to Foody</label><BR>
 <a href="signup.html"><button>Create your Foody account</button></a>
 </body>
